<resources>
    <string name="app_name">Slite</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mail">mail</string>
    <string name="password">password</string>
    <string name="signin">signin</string>
    <string name="fail_to_signin">Fail to Singin</string>
    <string name="appends_url_to_content">appends to content</string>
    <string name="appends_to_content">appends to content</string>
    <string name="fail_to_get_content">Fail to get content</string>
    <string name="fail_to_put_content">Fail to put content</string>
    <string name="fail_to_put_message">Fail to put message</string>
    <string name="fail_to_delete_content">Fail to delete content</string>
    <string name="fail_to_load_image">Fail to load image</string>

    <string name="uploading">Uploading</string>
    <string name="success_to_put_content">Putting content completed</string>

    <string name="confirm_delete_content">Delete content?</string>

    <string name="host">host</string>
    <string name="edit">edit</string>
    <string name="new_account">New Account</string>
    <string name="select_account">Select Account</string>
    <string name="save">save</string>
    <string name="loading">Loading...</string>
    <string name="create_content">Create Content</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="appends_image">Appends image</string>

    <string name="group">Group</string>

    <string name="fail_to_access_to_server">Fail to access to server</string>
    <string name="no_content">No content</string>
    <string name="no_channel">No channel</string>
    <string name="change_account">Change account</string>
    <string name="send">send</string>
    <string name="create_calendar">Create calendar</string>
    <string name="title">title</string>
    <string name="fail_to_parse_calendar">Fail to parse calendar</string>
    <string name="home">home</string>
    <string name="setting">setting</string>
    <string name="notification">Notification</string>
    <string name="fail_to_setup">Fail to setup</string>
    <string name="message_has_come">Message has come</string>

</resources>
