<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"></CalendarView>

    <LinearLayout
        android:id="@+id/imagePane"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0px"
            android:layout_height="fill_parent"
            android:layout_weight="1"/>

        <ScrollView
            android:layout_width="50dp"
            android:layout_height="fill_parent">

            <LinearLayout
                android:id="@+id/imageListPane"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/viewControllPane"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:visibility="gone"/>

        <Button
            android:id="@+id/editButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit"
            android:visibility="gone"/>
    </LinearLayout>


</LinearLayout>